--- a/Expertise.html
+++ b/Expertise.html
@@ -4,34 +4,59 @@
     <meta charset="UTF-8" />
     <title>expertise</title>
     <style>
+         body{
+              margin:0;
+              padding:0;
+          nav {
+          display: flex;
+          justify-content: space-between;
+          padding:1rem;
+
+          }
+          h3{
+              color: blanchedalmond ;
+              font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+              
+          }
+          a {
+              text-decoration: none;
+              color:blanchedalmond;
+              padding-right: 10px;
+          }
         body{
-            background-image: url(htmlback.png);opacity: 0.7;
+            /* background-image: url(htmlback.png);opacity: 0.7; */
             /* background-color: black; opacity: 0.5; */
+            background-image: url(htmlback.png); opacity: 0.7;
         }
         h1{
-            color: white;
-            font-size: 50px;
+            font-size: 60px;
            text-align: right; 
-            padding-left: 400px; 
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
-            display: inline; 
+            padding-left: 60px; 
+            font-family: Verdana, Geneva, Tahoma, sans-serif; 
             margin-top:0; 
             position: relative;
+            top: 0px;
+            display: inline-block;
+            color: white;
         }
         image {
             opacity: 0.6;
         }
         .card {
             background-color: teal;
+            opacity: 0.8;
             padding-left: 300px;
-            width: 700px;
-            height: 90px;
-            margin-top: 120px;
-            margin-left: 600px;
+            width: 600px;
+            height: 70px;
+            margin-top: 30px;
+            margin-left: 650px;
             margin-right: 0;
             display: inline-block;
-            /* position: relative; */
-        }
+            padding: 20px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+            text-align: center;
+            align-items: center; 
+}
         .grid-layout
         {
             display: grid;
@@ -47,26 +72,38 @@
             align-items: center"
             gap: 10px;
             position: relative;
-            border; 1px solid black;
             width; 400px
             padding-left; 50px;
             margin-left; 300px
+            border: 1px solid black;
+            border-collapse: collapse;
             
         }
     </style>
 </head>
-<body>
-    <div class="card"></div>
-    <h1 class="card-title">MY EXPERTISE</h1>
+<body style="background-image: url(htmlback.png);">
+    <nav>
+      <div>
+        <h3>MARION LILIAN._</h3>
+      </div>
+      <div>
+        <a href="Home.html">// Home</a>
+        <a href="Projects.html">// projects</a>
+        <a href="Expertise.html">// expertise</a>
+        <a href="Contact.html"> // Contact</a>
+      </div>
+    </nav>
+    <div class="card">
+    <h1>My Expertise</h1>
     </div>
-    <div>
-        <table style="width: 800px; align-items: center; margin-left: 200px; height: 200px;border: 1px;">
-           <tr style="font-size: 20px; font-family: Verdana, Geneva, Tahoma, sans-serif; border: 1px;">
+    <div> <br><br>
+        <table style="width: 900px; align-items: center; margin-left: 200px; height: 250px;border: 1px;">
+           <tr style="font-size: 20px; font-family: Arial, Helvetica, sans-serif; border: 1px;">
             <th>Software Development</th>
             <th>Frontend Dev <br>React, NextJS</th>
             <th>Flutter Dev <br>Android, iOS</th>
            </tr>  
-          <tr>
+          <tr style="padding: 5px; font-family: 'Times New Roman', Times, serif; font-size: 18px;">
           <td>Experienced in both functional and OOP: Dart, Python, Java, JavaScript, TypeScript.</td>
           <td>Passionate about UI/UX. Over 5 years of development experience in HTML, CSS, JS, React and NextJS frameworks.</td>
           <td>Skilled in developing hybrid mobile apps and cross-platform solutions using the Flutter framework.</td>
