--- a/Projects.html
+++ b/Projects.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script src="https://cdn.tailwindcss.com"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta charset="UTF-8" />
     <title>Projects</title>
     <style>
@@ -84,37 +86,48 @@
         <a href="Contact.html"> // Contact</a>
       </div>
     </nav>
-    <div>
-        <h1 style="text-align: center;"><span style="color: antiquewhite;">A Small Selection of</span>
-        <span style="color:violet;">recent projects</span></h1>
-    </div>
-    <div class="grid-container">
-        <div class="card">
-            <div class="card1"style="grid-template-columns: 1fr;">
-                <img src="Portfolio.png" alt="Portfolio"> <br>
-            <img src="Grill-Inn.png" alt="Grill-Inn"> <br>
-            <!-- <a href="" target="_blank">View Project</a> -->
-             <h2>Grill-Inn</h2>
-            <p>A restaurant website (html/CSS)</p>
-             <a href="https://marionlilian.github.io/Grill-Inn/Home.html">Check live site <img src="arrow.jpg" alt="direction" style="width: 20px;height:15px
-              ;"></a>
-              </div> <br><br>
-              <p style="display: grid;">This restaurant website, built with HTML and CSS, features a clean layout showcasing the menu, services, and contact information. It includes a hero section, styled navigation bar, responsive design, and vibrant visuals. The site provides an inviting experience, highlighting dishes and ambiance to attract customers and encourage reservations.</p>
-             <!-- AI-driven social media uses artificial intelligence to personalize user experiences, automate content recommendations, analyze trends, and optimize ad targeting. This helps businesses enhance engagement and make data-driven marketing decisions across platforms like Instagram, TikTok, and Facebook. -->
-              <div class="card2" style=" margin-left: 500px; grid-template-columns: 1fr;">
-                <!-- <p>AI-driven social media uses artificial intelligence to personalize user experiences, automate content recommendations, analyze trends, and optimize ad targeting. This helps businesses enhance engagement and make data-driven marketing decisions across platforms like Instagram, TikTok, and Facebook.</p> -->
-                <img src="socialmedia.png" alt="social media"> <br>
-            <!-- <a href="" target="_blank">View Project</a> -->
-             <h2>AI Media</h2>
-            <p>A social Media Website powered by AI</p>
-             <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.grandviewresearch.com%2Fblog%2Fai-driven-social-media&psig=AOvVaw224-0MDP3GBtvSg4NfrxaC&ust=1752439398790000&source=images&cd=vfe&opi=89978449&ved=0CBcQjhxqFwoTCPCM7c-XuI4DFQAAAAAdAAAAABAE">Check live site <img src="arrow.jpg" alt="direction" style="width: 20px;height:15px
-              ;"></a>
-              </div>
-              <p>AI-driven social media uses artificial intelligence to personalize user experiences, automate content recommendations, analyze trends, and optimize ad targeting. This helps businesses enhance engagement and make data-driven marketing decisions across platforms like Instagram, TikTok, and Facebook.</p>
+    <section class="text-gray-600 body-font">
+  <div class="container px-5 py-24 mx-auto flex flex-wrap">
+    <div class="flex flex-wrap -m-4">
+      <div class="p-4 lg:w-1/2 md:w-full">
+        <div class="flex border-2 rounded-lg border-gray-200 border-opacity-50 p-8 sm:flex-row flex-col">
+          <div class="w-16 h-16 sm:mr-8 sm:mb-0 mb-4 inline-flex items-center justify-center rounded-full bg-indigo-100 text-indigo-500 flex-shrink-0">
+            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-8 h-8" viewBox="0 0 24 24">
+              <path d="M22 12h-4l-3 9L9 3l-3 9H2"></path>
+            </svg>
+          </div>
+          <div class="flex-grow">
+            <h2 class="text-gray-900 text-lg title-font font-medium mb-3">Shooting Stars</h2>
+            <p class="leading-relaxed text-base">Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine.</p>
+            <a class="mt-3 text-indigo-500 inline-flex items-center">Learn More
+              <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
+                <path d="M5 12h14M12 5l7 7-7 7"></path>
+              </svg>
+            </a>
+          </div>
         </div>
+      </div>
+      <div class="p-4 lg:w-1/2 md:w-full">
+        <div class="flex border-2 rounded-lg border-gray-200 border-opacity-50 p-8 sm:flex-row flex-col">
+          <div class="w-16 h-16 sm:mr-8 sm:mb-0 mb-4 inline-flex items-center justify-center rounded-full bg-indigo-100 text-indigo-500 flex-shrink-0">
+            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10" viewBox="0 0 24 24">
+              <path d="M20 21v-2a4 4 0 00-4-4H8a4 4 0 00-4 4v2"></path>
+              <circle cx="12" cy="7" r="4"></circle>
+            </svg>
+          </div>
+          <div class="flex-grow">
+            <h2 class="text-gray-900 text-lg title-font font-medium mb-3">The Catalyzer</h2>
+            <p class="leading-relaxed text-base">Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine.</p>
+            <a class="mt-3 text-indigo-500 inline-flex items-center">Learn More
+              <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
+                <path d="M5 12h14M12 5l7 7-7 7"></path>
+              </svg>
+            </a>
+          </div>
+        </div>
+      </div>
     </div>
-        
-
-    </div>
-</body>
+  </div>
+</section>
+</body> 
 </html>
