--- a/Projects.html
+++ b/Projects.html
@@ -97,8 +97,9 @@
             </svg>
           </div>
           <div class="flex-grow">
-            <h2 class="text-gray-900 text-lg title-font font-medium mb-3">Shooting Stars</h2>
-            <p class="leading-relaxed text-base">Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine.</p>
+            <h2 class="text-gray-900 text-lg title-font font-medium mb-3" style="color: aqua;">Grill-Inn Restaurant</h2>
+            <img src="Grill-Inn.png" alt="Grill-Inn" style=""> <br> <br>
+            <p class="leading-relaxed text-base" style="color: beige;">This restaurant website, built with HTML and CSS, features a clean layout showcasing the menu, services, and contact information. It includes a hero section, styled navigation bar, responsive design, and vibrant visuals. The site provides an inviting experience, highlighting dishes and ambiance to attract customers and encourage reservations.</p>
             <a class="mt-3 text-indigo-500 inline-flex items-center">Learn More
               <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                 <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -116,8 +117,9 @@
             </svg>
           </div>
           <div class="flex-grow">
-            <h2 class="text-gray-900 text-lg title-font font-medium mb-3">The Catalyzer</h2>
-            <p class="leading-relaxed text-base">Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine.</p>
+            <h2 class="text-gray-900 text-lg title-font font-medium mb-3" style="color: aqua;">AI Media</h2>
+            <img src="socialmedia.png" alt="Social media;" style="height: 180px;"><br>
+            <p class="leading-relaxed text-base" style="color: beige;">AI-driven social media uses artificial intelligence to personalize user experiences, automate content recommendations, analyze trends, and optimize ad targeting. This helps businesses enhance engagement and make data-driven marketing decisions across platforms like Instagram, TikTok, and Facebook.</p>
             <a class="mt-3 text-indigo-500 inline-flex items-center">Learn More
               <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                 <path d="M5 12h14M12 5l7 7-7 7"></path>
