--- a/Expertise.html
+++ b/Expertise.html
@@ -96,31 +96,11 @@
         <a href="Contact.html"> // Contact</a>
       </div>
     </nav>
-    <div class="card">
+    <div class="card" style="height: 100px;">
     <h1>My Expertise</h1>
-    </div>
-    <div> <br><br>
-        <table style="width: 900px; align-items: center; margin-left: 200px; height: 250px;border: 1px;">
-           <tr style="font-size: 20px; font-family: Arial, Helvetica, sans-serif; border: 1px;">
-            <th>Software Development</th>
-            <th>Frontend Dev <br>React, NextJS</th>
-            <th>Flutter Dev <br>Android, iOS</th>
-           </tr>  
-          <tr style="padding: 5px; font-family: 'Times New Roman', Times, serif; font-size: 18px;">
-          <td>Experienced in both functional and OOP: Dart, Python, Java, JavaScript, TypeScript.</td>
-          <td>Passionate about UI/UX. Over 5 years of development experience in HTML, CSS, JS, React and NextJS frameworks.</td>
-          <td>Skilled in developing hybrid mobile apps and cross-platform solutions using the Flutter framework.</td>
-          </tr>
-
-        </table>
-              
     </div>
     <section class="text-gray-600 body-font">
   <div class="container px-5 py-24 mx-auto">
-    <div class="flex flex-col text-center w-full mb-20">
-      <h2 class="text-xs text-indigo-500 tracking-widest font-medium title-font mb-1">ROOF PARTY POLAROID</h2>
-      <h1 class="sm:text-3xl text-2xl font-medium title-font text-gray-900">Master Cleanse Reliac Heirloom</h1>
-    </div>
     <div class="flex flex-wrap -m-4">
       <div class="p-4 md:w-1/3">
         <div class="flex rounded-lg h-full bg-gray-100 p-8 flex-col">
@@ -130,10 +110,10 @@
                 <path d="M22 12h-4l-3 9L9 3l-3 9H2"></path>
               </svg>
             </div>
-            <h2 class="text-gray-900 text-lg title-font font-medium">Shooting Stars</h2>
+            <h2 class="text-gray-900 text-lg title-font font-medium">Software Development	</h2>
           </div>
           <div class="flex-grow">
-            <p class="leading-relaxed text-base">Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine.</p>
+            <p class="leading-relaxed text-base">Experienced in both functional and OOP: Dart, Python, Java, JavaScript, TypeScript.</p>
             <a class="mt-3 text-indigo-500 inline-flex items-center">Learn More
               <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                 <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -151,10 +131,11 @@
                 <circle cx="12" cy="7" r="4"></circle>
               </svg>
             </div>
-            <h2 class="text-gray-900 text-lg title-font font-medium">The Catalyzer</h2>
+            <h2 class="text-gray-900 text-lg title-font font-medium"><span>Frontend Dev </span><br>
+              <span>React, NextJS</span></h2>
           </div>
           <div class="flex-grow">
-            <p class="leading-relaxed text-base">Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine.</p>
+            <p class="leading-relaxed text-base">Passionate about UI/UX. Over 5 years of development experience in HTML, CSS, JS, React and NextJS frameworks.</p>
             <a class="mt-3 text-indigo-500 inline-flex items-center">Learn More
               <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                 <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -173,10 +154,11 @@
                 <path d="M20 4L8.12 15.88M14.47 14.48L20 20M8.12 8.12L12 12"></path>
               </svg>
             </div>
-            <h2 class="text-gray-900 text-lg title-font font-medium">Neptune</h2>
+            <h2 class="text-gray-900 text-lg title-font font-medium"> <span>Flutter Dev</span><br><span>Android, iOS</span>
+</h2>
           </div>
           <div class="flex-grow">
-            <p class="leading-relaxed text-base">Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine.</p>
+            <p class="leading-relaxed text-base">Skilled in developing hybrid mobile apps and cross-platform solutions using the Flutter framework.</p>
             <a class="mt-3 text-indigo-500 inline-flex items-center">Learn More
               <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                 <path d="M5 12h14M12 5l7 7-7 7"></path>
